# Information_Retrieval

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  template.py
research/: trials.ipynb
src/: helper.py
